Item5065: fix scrollbar in IE7
git-svn-id: http://develop.twiki.org/svn/twiki/branches/TWikiRelease04x02@15854 a00a5322-12db-0310-a70b-8735589c885e

--- a/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/style.css
+++ b/twikiplugins/PatternSkin/pub/TWiki/PatternSkin/style.css
@@ -757,7 +757,7 @@ html>body #patternLeftBarContents li { /* Mozilla */
 	border-width:1px;
 	border-style:solid;
 	padding:.1em .35em;
-	margin:-.2em 0 .2em .25em;
+	margin:0 0 .2em .25em;
 	font-weight:bold;
 }
 .patternToolBar span a:link,
